<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card="http://schemas.android.com/tools">

<android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#808080"
        android:clickable="true"
        android:focusable="true"
        android:elevation="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        card:cardCornerRadius="20dp"
        card:cardUseCompatPadding="false">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/nameperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/namePerson"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/person"/>
            <TextView
                    android:text="@string/idperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/idPerson"
                    app:layout_constraintStart_toEndOf="@+id/person"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/person" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>