<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.ConversationFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:id="@+id/recyclerView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_audio" app:layout_constraintStart_toStartOf="parent"
    >
    </android.support.v7.widget.RecyclerView>

    <Button
            android:text="@string/recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recordAudioButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/stop_and_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stopAndSaveButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/stopAndSaveButton"
            android:id="@+id/recyclerViewPerson"/>
    <Button
            android:text="@string/add_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPersonButton" app:layout_constraintStart_toEndOf="@+id/stopAndSaveButton"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/recordAudioButton"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>



