<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#808080"
        android:clickable="true"
        android:focusable="true"
        android:elevation="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        card:cardCornerRadius="20dp"
        card:cardUseCompatPadding="false"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card="http://schemas.android.com/tools">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameConversation"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/avatarConversation"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/number_of_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPersonText" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/number_of_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberAudioText"
                    app:layout_constraintEnd_toStartOf="@+id/numberAudio" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPerson"
                    app:layout_constraintStart_toEndOf="@+id/numberPersonText"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/numberPersonText"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberAudio"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toTopOf="@+id/numberAudioText"/>
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp" card:srcCompat="@tools:sample/avatars"
                    android:id="@+id/avatarConversation" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_delete_black_24dp"
                    android:id="@+id/delete" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
